# Refer-IA

./: .dockerignore  .env.example  .gitignore  README.md  db.py  main.py  pyproject.toml  stt.py
agent/: __init__.py  engine.py  guardrails.py  hitl.py  tools.py  types.py  worker.py
templates/: index.html  transcribe.html
tests/: test_consistencia.py
